# lessbad-os

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
src/: gdt.rs  interrupts.rs  lib.rs  macros.rs  main.rs  serial.rs  vga.rs
src/lib/: lib.rs  macros.rs
src/lib/descriptors/: idt.rs
src/lib/io/: serial.rs  vga.rs
src/lib/memory/: allocator.rs
tests/: boot.rs  heap.rs  panic.rs  stack.rs
