[package]
name = "lessbad_os"
version = "0.1.0"
edition = "2021"

[lib]
name = "lessbad"
path = "src/lib/lib.rs"

[dependencies]
bootloader = { version = "0.9.8", features = ["map_physical_memory"] }
linked_list_allocator = "0.9.0"
pc-keyboard = "0.5.0"
pic8259 = "0.10.1"
spin = "0.5.2"
uart_16550 = "0.2.0"
volatile = "0.2.6"
x86_64 = "0.14.2"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[package.metadata.bootimage]
test-success-exit-code = 69 # (34 << 1) | 1
test-timeout = 6 # Arbitrarily, our tests shouldn't take more than 6 seconds
test-args = [
    "-device",
    "isa-debug-exit,iobase=0xf4,iosize=0x04",
    "-serial",
    "stdio",
    "-display",
    "none",
]

[[test]]
name = "panic"
harness = false

[[test]]
name = "stack"
harness = false
